syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/fajaramaulana/simple_bank_project/pb";

message User {
    string user_uuid = 1;
    string username = 2;
    string full_name = 3;
    string email = 4;
    google.protobuf.Timestamp created_at = 5;
}